--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "@types/axios": "^0.9.36",
     "axios": "^1.13.2",
     "react": "^19.1.1",
